# Shortly

./: .gitignore  Cargo.toml  README.md  config.json  custom_urls.json
demo/: demo_urls.txt  shortly.drawio
src/: db_ops.rs  main.rs  shortly_ops.rs  shortly_server.rs  word_processing.rs
