[package]
name = "shortly-new"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
url = "2.5.4" 
rand = "0.9.0"
serde_json = "1.0.137"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }